--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -59,7 +59,7 @@
                         {{ activity.badge.name }}
                         {{ activity.user.nickname }}
                         {{ activity.state }}
-                        {{ activity.changeDate|date("m/d/Y H:i:s") }}
+                        {{ activity.unlockDate|date("m/d/Y H:i:s") }}
                         <div class="stream-item">
                             <div class="stream-item-avatar">
                                 <img src="/assets/images/avatar.png" alt="">
