--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -56,22 +56,18 @@
                     <div class="widget-title">Activity stream</div>
                     <div class="widget-body stream">
                     {% for activity in activities %}
-                        {{ activity.badge.name }}
-                        {{ activity.user.nickname }}
-                        {{ activity.state }}
-                        {{ activity.unlockDate|date("m/d/Y H:i:s") }}
                         <div class="stream-item">
                             <div class="stream-item-avatar">
                                 <img src="/assets/images/avatar.png" alt="">
                             </div>
                             <div class="stream-item-content">
-                                <h5 class="stream-item-content-title">EdekKredek</h5>
+                                <h5 class="stream-item-content-title">{{ activity.user.nickname }}</h5>
                                 <div class="stream-item-content-desc">
-                                    unlocked: <strong>Baby steps</strong>
+                                    unlocked: <strong>{{ activity.badge.name }}</strong>
                                 </div>
                             </div>
                             <div class="stream-item-date">
-                                <span>30.11.2017</span>
+                                <span>{{ activity.unlockDate|date("m/d/Y H:i:s") }}</span>
                             </div>
                         </div>
                     {% endfor %}
