--- a/app/Resources/views/panel/User/index.html.twig
+++ b/app/Resources/views/panel/User/index.html.twig
@@ -1,23 +1,21 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>USER LIST</h1>
-
+<div class="container">
+    <h1 class="text-center">User list</h1>
+    <br>
     {% block header_navigation_links %}
-        <li>
-            <a href="{{ path('admin_panel_user_index') }}">
-                <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.user.index'|trans }}
-            </a>
-        </li>
-
-        <li>
-            <a href="{{ path('admin_panel_badge_index') }}">
-                <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.badge.index'|trans }}
-            </a>
-        </li>
+        <ul class="nav nav-pills nav-fill">
+            <li class="nav-item">
+                <a class="nav-link" href="{{ path('admin_panel_badge_index') }}">Badge index</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link active" href="{{ path('admin_panel_user_index') }}">User index</a>
+            </li>
+        </ul>
     {% endblock %}
-
-    <table>
+    <br>
+    <table class="table bg-white">
         <thead>
         <tr>
             <th scope="col">ID</th>
@@ -48,5 +46,6 @@
         {% endfor %}
         </tbody>
     </table>
+</div>
 {% endblock %}
 
