--- a/app/Resources/views/panel/index.html.twig
+++ b/app/Resources/views/panel/index.html.twig
@@ -1,21 +1,20 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>PANEL</h1>
-
-    {% block header_navigation_links %}
-        <li>
-            <a href="{{ path('admin_panel_badge_index') }}">
-                <i class="fa fa-home" aria-hidden="true"></i> {{ 'menu.badge_index'|trans }}
-            </a>
-        </li>
-
-        <li>
-            <a href="{{ path('admin_panel_user_index') }}">
-                <i class="fa fa-list-alt" aria-hidden="true"></i> {{ 'menu.user_index'|trans }}
-            </a>
-        </li>
-    {% endblock %}
+    <div class="login-wrapper text-center">
+        <h1>Admin Dashboard</h1>
+        <br>
+        {% block header_navigation_links %}
+            <ul class="nav nav-pills nav-fill">
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin_panel_badge_index') }}">Badge index</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ path('admin_panel_user_index') }}">User index</a>
+                </li>
+            </ul>
+        {% endblock %}
+    </div>
 {% endblock %}
 
 
