--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -21,7 +21,11 @@
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                             <span>{{ app.user.nickname }}</span>
                             <img src="/assets/images/arrow-down.png" alt="">
-                            <img class="profile-avatar avatar" src="/assets/images/avatar2.png" alt="">
+                            {% if gravatar_exists(app.user.email) %}
+                                <img class="profile-avatar avatar" src="{{ gravatar(app.user.email) }}" />
+                            {% else %}
+                                <img class="profile-avatar avatar" src="/assets/images/avatar2.png" alt="">
+                            {% endif %}
                         </a>
                         <ul class="dropdown-menu profile-content">
                             <li>
@@ -29,7 +33,11 @@
                                     <div class="row">
                                         <div class="col-lg-4">
                                             <p class="text-center">
-                                                <img src="/assets/images/big-avatar.png" alt="">
+                                                {% if gravatar_exists(app.user.email) %}
+                                                    <img src="{{ gravatar(app.user.email) }}" />
+                                                {% else %}
+                                                    <img src="/assets/images/big-avatar.png" alt="">
+                                                {% endif %}
                                             </p>
                                         </div>
                                         <div class="col-lg-8">
