--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -34,7 +34,7 @@
                                         </div>
                                         <div class="col-lg-8">
                                             <p class="text-left"><strong>{{ app.user.username }}</strong></p>
-                                            <p class="text-left small">{{ app.user.email }}</p>
+                                            <p class="profile-content-email text-left small">{{ app.user.email }}</p>
                                         </div>
                                     </div>
                                 </div>
