--- a/web/assets/styles/_header.less
+++ b/web/assets/styles/_header.less
@@ -19,6 +19,15 @@
     &-content {
         left: auto;
         right: 0;
+        padding: 10px;
+        padding-bottom: 20px;
+        border: 0;
+        box-shadow: 0 0 12px rgba(0,0,0,0.1);
+
+        &-email {
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
     }
 
     &-avatar {
