--- a/web/assets/styles/_header.less
+++ b/web/assets/styles/_header.less
@@ -32,6 +32,8 @@
 
     &-avatar {
         margin-left: 10px;
+        max-width: 46px;
+        max-height: 46px;
     }
 
     .dropdown-toggle {
