--- a/web/assets/styles/_base.less
+++ b/web/assets/styles/_base.less
@@ -1,5 +1,6 @@
 a {
-
+    color: #2893ee;
+    
     &:hover {
         text-decoration: none;
 
@@ -27,4 +28,26 @@ input[type='submit'] {
     border-radius: 22px;
     font-size: 14px;
     padding: 10px 40px;
+}
+
+.btn-sm {
+    padding: 5px 20px;
+    font-size: 12px;
+}
+
+.btn-success {
+    color: #fff;
+    background-color: #58bf23;
+    border-color: #58bf23;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #2893ee;
+    border-color: #2893ee;
+}
+
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+    color: #fff;
+    background-color: #2893ee;
 }
