--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -76,4 +76,13 @@
             </div>
         </div>
     </div>
+
+
+    {% for item in topTen %}
+        NICK: {{ item.0.user.nickname }} <br/>
+        BADGE: {{ item.0.badge.name }} <br/>
+        COUNTER: {{ item.counter }} <br/>
+        <br/><br/>
+    {% endfor %}
+
 {% endblock %}
