--- a/web/assets/styles/_widget.less
+++ b/web/assets/styles/_widget.less
@@ -1,4 +1,5 @@
 .widget {
+    margin-bottom: 40px;
 
     &-title {
         color: #909090;
@@ -24,6 +25,8 @@
 
             img {
                 border-radius: 50%;
+                max-width: 45px;
+                width: 45px;
             }
         }
 
