--- a/app/Resources/views/panel/Badge/index.html.twig
+++ b/app/Resources/views/panel/Badge/index.html.twig
@@ -8,10 +8,10 @@
     {% block header_navigation_links %}
         <ul class="nav nav-pills nav-fill">
             <li class="nav-item">
-                <a class="nav-link active" href="{{ path('admin_panel_badge_index') }}">Badge index</a>
+                <a class="nav-link active" href="{{ path('admin_panel_badge_index') }}">Badges</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{ path('admin_panel_user_index') }}">User index</a>
+                <a class="nav-link" href="{{ path('admin_panel_user_index') }}">Users</a>
             </li>
         </ul>
     {% endblock %}
