--- a/app/Resources/views/panel/Badge/index.html.twig
+++ b/app/Resources/views/panel/Badge/index.html.twig
@@ -39,12 +39,12 @@
                 <td>{{ badge.description }}</td>
                 <td class="text-right">
                     <div>
-                        <a href="">
-                            <i></i> {{ 'action.edit'|trans }}
+                        <a class="btn btn-warning btn-sm disabled" href="#">
+                            Edit
                         </a>
 
-                        <a href="">
-                            <i></i> {{ 'action.delete'|trans }}
+                        <a class="btn btn-danger btn-sm disabled" href="#">
+                            Delete
                         </a>
                     </div>
                 </td>
