--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -93,7 +93,7 @@
                                 <div class="stream-item-content">
                                     <h5 class="stream-item-content-title">{{ item.0.user.nickname }}</h5>
                                     <div class="stream-item-content-desc">
-                                        unlocked: <strong>{{ item.0.badge.name }}</strong>
+                                        last unlocked: <strong>{{ item.0.badge.name }}</strong>
                                     </div>
                                 </div>
                                 <div class="stream-item-date">
