--- a/app/Resources/views/panel/Badge/add_badge.html.twig
+++ b/app/Resources/views/panel/Badge/add_badge.html.twig
@@ -48,6 +48,8 @@
                     </label>
                 </span>
 
+                {{ form_widget(badge_form._token) }}
+
                 <div class="text-right">
                     <button class="btn btn-primary" type="submit" id="badge_submit" name="badge[submit]">Create badge</button>
                 </div>
