--- a/app/Resources/views/panel/Badge/index.html.twig
+++ b/app/Resources/views/panel/Badge/index.html.twig
@@ -43,7 +43,7 @@
                             Edit
                         </a>
 
-                        <a class="btn btn-danger btn-sm disabled" href="#">
+                        <a class="btn btn-danger btn-sm enabled" href="{{ path('admin_panel_badge_delete', {'id':badge.id}) }}">
                             Delete
                         </a>
                     </div>
