--- a/app/Resources/views/panel/Badge/add_badge.html.twig
+++ b/app/Resources/views/panel/Badge/add_badge.html.twig
@@ -49,7 +49,7 @@
                 </span>
 
                 <span class="input input--hoshi">
-                    <input id="badge_target" name="badge[target]" required="required" class="input__field input__field--hoshi" type="number">
+                    {{ form_widget(badge_form.target, { 'attr': {'class': 'input__field input__field--hoshi'} }) }}
                     <label class="input__label input__label--hoshi input__label--hoshi-color-2" for="badge_target">
                         <span class="input__label-content input__label-content--hoshi">Target</span>
                     </label>
