--- a/app/Resources/views/panel/Badge/index.html.twig
+++ b/app/Resources/views/panel/Badge/index.html.twig
@@ -37,7 +37,7 @@
                 <td>{{ badge.description }}</td>
                 <td class="text-right">
                     <div>
-                        <a class="btn btn-warning btn-sm disabled" href="#">
+                        <a class="btn btn-warning btn-sm enabled" href="{{ path('admin_panel_badge_edit', {'id':badge.id}) }}">
                             Edit
                         </a>
 
