--- a/app/Resources/views/panel/Badge/add_badge.html.twig
+++ b/app/Resources/views/panel/Badge/add_badge.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <div class="container">
         <div id="welcome">
-            <h1 class="text-center">Add badge</h1>
+            <h1 class="text-center">Badge details</h1>
         </div>
         <br>
         {% block header_navigation_links %}
@@ -58,7 +58,7 @@
                 {{ form_widget(badge_form._token) }}
 
                 <div class="text-right">
-                    <button class="btn btn-primary" type="submit" id="badge_submit" name="badge[submit]">Create badge</button>
+                    <button class="btn btn-primary" type="submit" id="badge_submit" name="badge[submit]">Save</button>
                 </div>
 
             </form>
