user registered na sztywno

--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -10,7 +10,9 @@
         </span>
         </div>
     </nav>
-    {{ parent() }}
+    <div class="alert alert-success" style="text-align: center">
+        User created. Have fun!
+    </div>
     <div class="login-wrapper text-center">
         {% if targetUrl %}
             <p><a class="btn btn-primary" href="{{ targetUrl }}">Go to dashboard</a></p>
